npactflask/npactflask/static/css/style.css
* {
    margin:0;
    padding:0;
}

body {
    background:#fff url(../images/bg.jpg) repeat-x;
    text-align:center;
    padding:0 20px;
}

a {
    text-decoration:none;
}

a:link,a:visited {
    color:#0021a5 !important;
}

a:hover,a:active {
    color:#ff4a00;
}


acronym {
    border:0;
    font-style:normal;
}

p#dept {
    position: relative;
    height: 40px;

    font-size: 14px;
    /* \*/
    overflow: hidden;
    /* */
}

p#dept a {
    color: white !important;
    line-height:160%;
    font-family: Century Gothic;
    font-size: larger;
}

p#dept a span {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    background: url(../images/unitHeader.gif);
    width: 100%;
    height: 100%;
    cursor: hand;
}

p#uf{
    font-size: 1px;
    width: 181px;
    height: 40px;
    top:0;
    left: 60%;
    position: absolute;
    /*\*/overflow: hidden;
    font-size: 14px;/**/
}

p#uf a span{
    background-image: url(../images/universityOfFlorida.gif);
    top:0;
    left:0;
    display:block;
    position: absolute;
    width: 181px;
    height: 40px;
    font-size: 1px;
    cursor: pointer;
}

h3,h4 {
    font-weight:400;
}

p,li,td,dd,dt {
    color:#444;
    font-size:75%;
}

th { color:#222; font-size: .75em; }

th,td { padding: 3px; }

ul {
    list-style:none;
}

.contentPadding { padding: 5px; }


#content {
    border-left:solid 1px #CCC;
    float:right;
    padding-top:10px;
    position:relative;
    width:77%;
    z-index:5;
    min-height: 376px;
}

#content h2 {
    font-size: 24px;
    margin:12px 0 15px 8px;
}

#content h2 + h3 { margin-top: 2px; }

#content h4 {
    color:#000;
    font-family:Trebuchet MS, Arial, Helvetica, sans-serif;
    font-size:18px;
}

#content ul {
    margin: 10px;
}

#content li {
    line-height: 110%;
    list-style:disc;
    margin:6px 0 6px 10px;
}

#content li li {
    padding:0 5px 0 20px;
}

#content p {
    line-height:17px;
    margin:2px 10px 15px 13px;
}

#content p a {
    border-bottom:1px dashed #0021A5;
}

#content p a:link,#content p a:visited {
    color:#24b;
}

#content p a:hover,#content p a:active {
    color:#f40;
}

#content p#listing {
    letter-spacing:-1px;
    padding-top:15px;
    text-align:center;
}

#content ul {
    margin:15px;
}

#footer {
    background-color:#fff;
    border-top:1px solid #d1d1d1;
    clear:both;
    color:#999;
    height:50px;
    padding:10px 0 25px;
    position:relative;
}

#footer li {
    border-right:1px solid #ccc;
    display:inline;
    /*\*/float:left;/**/
    font-size:100%;
    margin-right:4px;
    padding-right:4px;
}

#footer ul,#footer p {
    clear:both;
    float:left;
    font-size:60%;
    line-height:1.4em;
    width:550px;
}

#footerHome span {
    background:url(//images.webadmin.ufl.edu/signatures/UF-Signature-Themeline.gif) 0 0 no-repeat;
    height:54px;
    position:absolute;
    right:0;
    top:10px;
    width:195px;
}

#header {
    height:41px;
    margin:0 auto;
    padding-left:25px;
    position:relative;
    text-align:left;
    max-width:1300px;
    width:99%;
}

#mainContainer {
    background:#fff url(../images/bg_priNav.jpg) repeat-x;
    max-width:1300px;
    min-width:800px;
    margin:0 auto;
    padding-top:10px;
    position:relative;
    text-align:left;
    width:100%;
}

* html #mainContainer {
    background-position: 249px 0;
}

#leftCol {
    left:0;
    padding:3px 2px 0;
    position:relative;
    top:0;
    width:23%;
}
#leftCol #search {margin-bottom: 25px;}

#priNav h2,#footer h3 {
    display:none;
}

#priNav h3 {
    background:url(../images/pointer.gif) no-repeat 0 11px;
    font:normal 115% Trebuchet MS, Arial, Helvetica, sans-serif;
    letter-spacing:1px;
}

#priNav li {
    font:125%/18px 'Trebuchet MS', verdana, geneva, Arial, Helvetica, sans-serif;
}

#priNav li a {
    background:url(../images/pointer.gif) no-repeat 10px 11px;
    border-bottom:1px solid #e6e6e6;
    color:#0021a5;
    display:block;
    letter-spacing:1px;
    padding:7px 0 6px 23px;
    width:88%;
}

* html #priNav li a, * html #priNav #active{
    width:248px;
}

#priNav #active {
    color: #000;
}

#priNav li a:hover {
    background-color:#CFD5EE;
}

#related {
    padding:32px 8px 0;
    width:90%;
}

#related h3 {
    color:#111;
    font-size:75%;
    font-style:italic;
    padding:4px 0 0 10px;
    text-transform:uppercase;
}

#related h4 {
    background:url(../images/pointer_small.gif) no-repeat 0 13px;
    clear:left;
    letter-spacing:1px;
    padding:7px 0 3px 10px;
}

#related li {
    padding-right:2px;
}

* html #related li {
    float:none;
}

#related ul {
    float:left;
    padding:0 0 5px 10px;
}


/* ### section header image ### */

/* margin accounts for content padding */
h2#secHeader { margin:-2px 0 0; }

#secHeader {
    height:194px;
    margin-bottom:14px;
    position:relative;
    width:516px;
}

#secHeader span {
    height:100%;
    position:absolute;
    width:98.5%;
    background-size:100%;
}

dl { margin-bottom:25px;}
dt { font-weight: bold; margin-left: 10px; margin-top:4px;}
dd { margin-left: 18px; margin-bottom:10px;}


textarea { width: 100%; }
#content .ui-accordion-content p { margin: 0; }

.helptext {font-size: 1em; float:right; }

#accordion {margin-left:9px;width:95%;}

#accordion div {margin-top:5px;}
#accordion div div {margin-top:0px;}
#id_url {width:98%;}

.error, ul.errorlist li { color:red; }

ul.messages { border: 1px dotted #444; }

p#error-message {
    margin: 0px 0px;
}

button.Start { clear:both; margin: 8px;}

.qtip-help-text {
    display: none;
    font-size: 1.5em;
}
.qtip-help-text p { padding: 5px; }
.qtip {
    max-width: 400px !important;
}
h2 span.qtip-help-icon { float: right; }


.blue-text {color:#5368C1;}
.orange-text {color:#FF4A00;}

#start-over {font-size:14px;font-weight:bold;}
#start-over a, #start-over a:visited {color:#FF4A00;}

/* ****** For the processing page ****** */
#progress .ui-icon { float:left;  margin-right: .5em;}

#progress h3 + div { padding-left: 16px; }
#progress h4 { color:#FF4A00; }


.spinner { height: 24px; width:24px; float:left;}

#content .ui-state-error { font-size: 1.2em; }
#content .ui-corner-all p { margin: .5em .7em .7em .7em }


/* ****** For the Results page ****** */
#
.ui-state-highlight { margin-top:10px; padding:10px; width:94%; }
.ui-state-highlight p {color:#000;}

.ui-state-highlight li a {font-weight:bold;}
#files li {color:#000;}
#files li:hover {color:#C60;}

#configContainer {
    background: #F7F7F7; 
    border-bottom: solid 4px #4059BD;
    font-size: 14px;
    padding: 0px 8px 8px;
}

#configContainer div.ng-scope {margin-bottom: 5px;}

#configContainer h2 {
    background: #4059BD;
    border-bottom: solid 2px #FF4A00;
    position: relative;
    color: #fff; 
    margin-bottom: 10px; 
    margin-left: -8px;
    margin-right: -8px;
    padding: 3px 5px;
}
#configContainer h2:after { 
    left: 100%; 
    top: 50%; 
    border: solid transparent; 
    content: " "; 
    height: 0; 
    width: 0; 
    position: absolute; 
    pointer-events: none; 
    border-color: rgba(64, 89, 189, 0); 
    border-left-color: #4059BD; 
    border-width: 16px;
    margin-top: -16px; 
    z-index: 500;
}
#configContainer h3 { 
    color: #4059BD;
    font-size: 100%;
    font-style: normal;
    font-weight: bold;
    padding: 4px 0px 0px 0px;
    text-transform: uppercase;
    margin-top: 10px; 
}

#configContainer ul {padding-left: 5px;}
#configContainer li {
    border-bottom: solid 1px #E5E5E5;
    margin-bottom: 5px;
    padding-bottom: 3px;
}
#configContainer input[type=checkbox] {
    margin: 0px 4px;
}

.sm-text {font-size: 10px;}
.md-text {font-size: 14px;}

.graph {
    border-bottom: 2px solid #AAF;
    padding: 8px 0px;
    overflow: hidden;
}

.pointer:hover { cursor: pointer; }

#printControls { float: right;}
#printControls .btn {
    display: inline-block; 
    padding: 4px 10px 6px;
}
#printControls .ui-icon-print {margin-top: 1px;}
#printConfirm p {
    font-size: 14px;
    text-align: left;
    margin: 10px 10px;
}


.ui-widget-header {
    color: #fff;
}
.ui-front {box-shadow: 0px 1px 8px #000;}
.ui-front .ui-button {border:none; background: #7084D3;}

#content #progress h2 {
    margin:12px 0 15px 12px;
}

#progressreport h3 {
    margin-left: 12px;
}

.tooltip.customClass>.tooltip-inner {
    text-align: left;
    font-size: 16px;
    color: #880000;
    background-color: #ffff66;
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
    padding: 10px 10px;
    max-width: 300px;
}

.tooltip.customClass>.tooltip-arrow {
    display: block;
    border-right-color: #ffff66;
}

.tooltip.ng-isolate-scope.right.customClass {
    width: 300px;
}

label.track-label{
   margin: 0px;
}

checkbox-list#profile-options>label {
   display: inline-block;
}

/* DNA Popup */

.dna-popup {
    text-align: left;
    padding: 15px 15px;
}

.dna-text {
    font-family: Courier New, monospace;
    font-size: 15px;
    word-wrap: break-word;
    text-align: left;
}

/* Form styles */

#startforms {
    min-height:150px;
}

.btn-form {
    color: #fff;
    background: #5965C2;
    padding: 10px 10px;
    font-size: 18px;
}

.btn-form:hover {
    background: #5965C2;
    color: #F9B440;
}

.btn-form:active,
.btn-form:active:hover {
    background: #5965C2;
    color: #F9B440;
}

#input-file {
    width: 50%;
}

.btn-file {
    background: #f7f7f7;
    position: relative;
    overflow: hidden;
    border: 1px solid #CCCCCC;
    border-right: 0px;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: inline;
}

.form-control[readonly] {
    background: #fff;
}

.force-active {
    background: #546ABE !important;
    color: #FFB241 !important;
}

#btn-upload {
    margin-left: 10px;
}

#startforms form {
    margin-left: 10px;
}

label {
    display: block;
    margin-top: 5px;
    margin-bottom: 10px;
}

.btn-search {
    background: #f7f7f7;
    border-color: #CCCCCC;
    padding: 3px 8px;
}

form select.form-control,
div.input-group input#searchbox,
.btn-search {
    font-size: 12px;
    height: 25px;
}

/* Error messages */
 
 .alert {
    font-size: 18px;
 }

